# Ohjelmistotekniikka

./: README.md
laivanupotuspeli/: .pylintrc  pyproject.toml  tasks.py
laivanupotuspeli/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laivanupotuspeli/src/: index.py
laivanupotuspeli/src/assets/: theme.json
laivanupotuspeli/src/engine/: abstract_display.py  abstract_render_clock.py  abstract_render_dirty.py  application.py  asset_loader.py  board_controller.py  display.py  event.py  event_relay.py  game_board_visual.py  pygame_event_handler.py  render_clock.py  render_layer.py  render_object.py  renderer.py
laivanupotuspeli/src/engine/rendering/: abstract_display.py  abstract_render_clock.py  abstract_renderable.py  colors.py  display.py  gui_holder.py  gui_renderer.py  gui_scene.py  render_clock.py  renderer.py
laivanupotuspeli/src/game/: abstract_player.py  ai_player.py  board.py  direction.py  game.py  game_controller.py  guess.py  player.py  player_game_phase.py  ship.py  ship_type.py
laivanupotuspeli/src/tests/engine/: event_relay_test.py
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
