[tool.poetry]
name = "ohjelmistotekniikka"
version = "0.1.0"
description = ""
authors = ["BlueShiftButterfly <34643088+BlueShiftButterfly@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
