[tool.poetry]
name = "ohjelmistotekniikka"
version = "0.1.0"
description = ""
authors = ["BlueShiftButterfly <34643088+BlueShiftButterfly@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
thorpy = "^2.1.10"
numpy = "^2.2.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.4"
pytest = "^8.3.3"
pylint = "^3.3.1"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Fix pytest not finding local modules, even when __init__.py is created 
[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
